# counting_contract

./: .gitignore  Cargo.toml
.cargo/: config
schema/: counting_contract.json
src/: contract.rs  lib.rs  msg.rs  state.rs
src/multitest/: tests.rs
