[package]
name = "counting_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1.3"
cw-storage-plus = "1.0.0"
serde = "1.0.0"
thiserror = "1.0.37"

[dev-dependencies]
cw-multi-test = "0.16.1"

