[package]
name = "counting_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-schema = "1.1.8"
cosmwasm-std = "1.1.3"
cw-storage-plus = "1.0.0"
schemars = "0.8.11"
serde = "1.0.0"
thiserror = "1.0.37"
getrandom = { version = "0.2", features = ["js"] }
cw-multi-test = { version = "0.16.1", optional = true }


[dev-dependencies]
cw-multi-test = "0.16.1"

